@@ -1,5 +1,5 @@
 global=123 456
-hard_str="\x0A1 23\\456\\789 \x3B\x23 " ; mega string
+hard_str ="\x0A1 23\\456\\789 \x3B\x23 " ; mega string
 
 [s0]
 i0 = 00
@@ -30,7 +30,7 @@ flag2=false
 
 [int64]
 bin=EF:CD:AB:00:21:43:65:87
-i64=8765432100ABCDEF
+  i64:8765432100ABCDEF
 
 [ end section ]
 value=end
