@@ -1,5 +1,5 @@
 global=123 456
-hard_str="\x0A1 23\\456\\789 \x3B\x23 " ; mega string
+hard str="\x0A1 23\\456\\789 \x3B\x23 " ; mega string
 
 [s0]
 i0 = 00
@@ -22,14 +22,14 @@ i1=21
 i2=22 ;;;
 
 [unused]
-hi='Hello, world!' ;-)
+hi : 'Hello, world!' ;-)
 
 [bool]
-flag1: true
+ flag1: true
 flag2=false
 
 [int64]
-bin=EF:CD:AB:00:21:43:65:87
+ bin = EF:CD:AB:00:21:43:65:87
 i64 := 8765432100ABCDEF
 
 [ end section ]
