@@ -22,14 +22,14 @@ i1=21
 i2=22 ;;;
 
 [unused]
-hi='Hello, world!' ;-)
+hi : 'Hello, world!' ;-)
 
 [bool]
-flag1: true
+ flag1: true
 flag2=false
 
 [int64]
-bin=EF:CD:AB:00:21:43:65:87
+ bin = EF:CD:AB:00:21:43:65:87
 i64 := 8765432100ABCDEF
 
 [ end section ]
