@@ -4,6 +4,8 @@ ChangeLog of simple C/C++ library "clib"
  * changed
 
 2015.01.26
+ + add "doc" directory
+ * ini_t: allow whitespaces inside ident (keys)
  * upgrade Makefiles and Makefile.skel
  * midify unit test `str_t` (str_hex(), str_to_long_cstyle(), ...)
  * test `str_t` under Visual Studio / MinGW and fix bugs (near vsnprintf() again)
